--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -11,6 +11,8 @@ body {
   --blue: #3627b1;
   --cyan: #25afce;
   --green: #25ce2b;
+  --pink: #ce2590;
+  --yellow: #cfe319;
   --transparent: #00000000;
   --radius-left: 3rem 0 0 3rem;
   --radius-right: 0 3rem 3rem 0;
@@ -22,6 +24,7 @@ button:hover,
 .skill-item:hover,
 .item:not(.active):hover,
 .sub-container-2:not(.active-subheading):hover,
-.sub-container-3:not(.active-subheading):hover {
+.sub-container-3:not(.active-subheading):hover,
+.sub-container-4:not(.active-subheading):hover {
   background-image: linear-gradient(90deg, #ffffff00, #ffffff42 50%, #ffffff00);
 }
